[project]
name = "uk-ds-agent-pr-review"
version = "0.1.0"
description = "UK Data Science pull request reviewer (PR-AI for short) using Claude Code agent model."
requires-python = ">=3.11.0,<3.12.0"
dependencies = [
	"azure-devops==7.1.0b4",
    "claude-agent-sdk>=0.2,<0.3",
    "anyio>=4.13,<4.14",
	"pydantic>=2.13,<2.14",
	"typer>=0.25,<0.26",
	"msrest>=0.7,<0.8",
]

[project.scripts]
prai = "prai.cli:app"

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "prai"

[tool.uv]
python-preference = "only-managed"
compile-bytecode = true
native-tls = true
